--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html>
+</head>
+<body>
+<script>
+window.location.href = "https://t.me/Fredflix1";
+</script>
+</html>
+<noscript>
+</noscript>
+#EXTINF:-1 tvg-id="" group-title="𝗝𝗢𝗜𝗡 𝗢𝗨𝗥 𝗧𝗘𝗟𝗘𝗚𝗥𝗔𝗠" tvg-logo="https://i.postimg.cc/nr2v069q/photo1720775692.jpg" ,t.me/Fredflix1
+https://ia800601.us.archive.org/1/items/intro-fredflix1-1080p/intro-%40fredflix1080p.mp4
+
+
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://hotflixbd.com/assets/images/laliga.png"group-title="HOTFLIXBD",LALIGA
 https://cdn.hotflix-bd.online/laliga1/tracks-v1a1/mono.m3u8?remote=103.148.74.89&token=8323640e3658d331172040f2a7edfcbba689cb7d-bd140cfb3ee75101b0bac25e0916f231-1726552404-1726541604
 
